# seaos-apps

./: ProjectHome.md
data/usr/man/man3/: __env_lock.3  __malloc_lock.3  __malloc_unlock.3  _close_r.3  _fstat_r.3  _getpid_r.3  _kill_r.3  _lseek_r.3  _open_r.3  _read_r.3  _times_r.3  _wait_r.3  abort.3  abs.3  acosf.3  acosh.3  asine.3  asinef.3  asinf.3  asinhf.3  atan2.3  atan2f.3  atangent.3  atexit.3  atoi.3  bsearch.3  bzero.3  cbrtf.3  ceil.3  clock.3  cos.3  cosf.3  ctime.3  difftime.3  erf.3  erfcf.3  exit.3  exp.3  fabs.3  fcvtbuf.3  (+90 more)
porting/: install_ported.sh  move_exe.sh
porting/ported/: install_binutils.sh  install_gcc.sh  patch_gcc.sh  patch_newlib.sh
seaos-util/: Makefile.in
seaos-util/autom4te.cache/: requests
seaos-util/src/: Makefile.am  Makefile.in  bring.c  dmod.c  ioctl.c  lmod.c  login.c  losetup.c  lscpu.c  lspci.c  main.c  modprobe.c  mount.c  preinit.c  ps.c  spawn.c  sudo.c  t.c  umount.c  useradd.c
trunk/data/usr/man/man3/: __env_unlock.3  _execve_r.3  _fork_r.3  _getenv_r.3  _gettimeofday_r.3  _link_r.3  _mblen_r.3  _sbrk_r.3  _stat_r.3  _unlink_r.3  _write_r.3  acos.3  acoshf.3  asctime.3  asin.3  asinh.3  assert.3  atan.3  atof.3  (+125 more)
trunk/porting/: install_ported.sh
trunk/porting/ported/: install_bash.sh  install_coreutils.sh  install_gcc.sh  patch_gcc.sh  patch_newlib.sh  patch_seaos-util.sh
trunk/porting/ported/files/: seaos.h
trunk/porting/ported/patches/: gcc-4.7.1-seaos.patch
trunk/seaos-util/src/: Makefile.am  Makefile.in  dmod.c  ioctl.c  lmod.c  login.c  losetup.c  lsmod.c  modprobe.c  mon.c  mount.c  pidof.c  preinit.c  ps.c  rc.c  shutdown.c  swap.c  umount.c
