
bin_PROGRAMS = ioctl lmod login losetup lscpu lsmod lspci modprobe mon mount sps shutdown sudo swap t umount

ioctl_SOURCES = ioctl.c
lmod_SOURCES = lmod.c
login_SOURCES = login.c
losetup_SOURCES = losetup.c
lscpu_SOURCES = lscpu.c
lsmod_SOURCES = lsmod.c
lspci_SOURCES = lspci.c
modprobe_SOURCES = modprobe.c
mon_SOURCES = mon.c
mount_SOURCES = mount.c
sps_SOURCES = ps.c
shutdown_SOURCES = shutdown.c
sudo_SOURCES = sudo.c
swap_SOURCES = swap.c
t_SOURCES = t.c
umount_SOURCES = umount.c
