
bin_PROGRAMS = ioctl login losetup lscpu lspci modprobe mon mount sps shutdown sudo swap t umount useradd

ioctl_SOURCES = ioctl.c
login_SOURCES = login.c
losetup_SOURCES = losetup.c
lscpu_SOURCES = lscpu.c
lspci_SOURCES = lspci.c
modprobe_SOURCES = modprobe.c
mon_SOURCES = mon.c
mount_SOURCES = mount.c
sps_SOURCES = ps.c
shutdown_SOURCES = shutdown.c
sudo_SOURCES = sudo.c
swap_SOURCES = swap.c
t_SOURCES = t.c
umount_SOURCES = umount.c
useradd_SOURCES = useradd.c
